--- a/public/css/style4.css
+++ b/public/css/style4.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
+    overflow-x: hidden;
 }
 
 p {
@@ -58,8 +59,8 @@ i, span {
 }
 
 #sidebar {
-    min-width: 100px;
-    max-width: 100px;
+    min-width: 250px;
+    max-width: 250px;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
